// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScansEmptyStateReducer should handle all defined error types: rejected types GET_SCANS_SOURCES 1`] = `
Object {
  "result": Object {
    "error": true,
    "errorMessage": "ERROR",
    "fulfilled": false,
    "pending": false,
    "sourcesExist": false,
  },
  "type": "GET_SCANS_SOURCES_REJECTED",
}
`;

exports[`ScansEmptyStateReducer should handle all defined fulfilled types: fulfilled types GET_SCANS_SOURCES 1`] = `
Object {
  "result": Object {
    "error": false,
    "errorMessage": "",
    "fulfilled": true,
    "pending": false,
    "sourcesExist": false,
  },
  "type": "GET_SCANS_SOURCES_FULFILLED",
}
`;

exports[`ScansEmptyStateReducer should handle all defined pending types: pending types GET_SCANS_SOURCES 1`] = `
Object {
  "result": Object {
    "error": false,
    "errorMessage": "",
    "fulfilled": false,
    "pending": true,
    "sourcesExist": false,
  },
  "type": "GET_SCANS_SOURCES_PENDING",
}
`;
